<resources>
    <array name="gender">
        <item>@string/male</item>
        <item>@string/female</item>
    </array>
    <array name="user_type">
        <item>@string/donor</item>
        <item>@string/recipients</item>
    </array>
    <array name="donor_type">
        <item>@string/blood</item>
        <item>@string/organs</item>
    </array>
    <array name="blood_type">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </array>
    <array name="country">
        <item>Jenin</item>
        <item>Nablus</item>
        <item>Tulkarm</item>
        <item>Ramallah</item>
        <item>Jerusalem</item>
        <item>Jericho</item>
        <item>Tubas</item>
        <item>Bethlehem</item>
        <item>Hebron</item>
        <item>Qalqilya</item>
        <item>Salfit</item>
    </array>
    <string name="app_name">Blood&amp;Oran</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="select_location">Select Your Location</string>
    <string name="donor">Donor</string>
    <string name="recipients">Recipients</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="hospital">Hospital</string>
    <string name="blood_bank">Blood Bank</string>

    <string name="requried">requried</string>
    <string name="medical_history">Medical History</string>
    <string name="maps_key">AIzaSyBAmgeoW890a_i0O9z7PpWdIK2OZfk33vc</string>
    <string name="loading">Wait…</string>
    <string name="login">login</string>
    <string name="error_problem">There is a problem please try again</string>
    <string name="email_exist">This email is already registered</string>
    <string name="email_password_error">There is an error in the email or password</string>
    <string name="email_not_correct">Email not Correct</string>
    <string name="confirm_pass">Confirm Passowrd</string>
    <string name="country">Chose Cuntary</string>
    <string name="user_type">User Type</string>
    <string name="blood_type">Chose Blood</string>
    <string name="chose_gender">Chose Gender</string>

    <string name="birthday">BirthDay</string>
    <string name="donor_type">Donor Type</string>
    <string name="blood">blood</string>
    <string name="organs">organs</string>

    <string name="password_not_confirmed">password not Confirmed</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome!</string>
    <string name="forget_password"><u>Forget your password?</u></string>
    <string name="recovery_password_mail">"Verification code to reset Blood&amp;Oran password"</string>
    <string name="email_sent">Email Sent</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="statics">Statics</string>
    <string name="profile">Profile</string>
    <string name="request_origion">Request Origion</string>
    <string name="request_blood">Request Blood</string>
    <string name="welcome_select">Select Donor Type</string>
    <string name="search_donor">Search Donor</string>
    <string name="search">Search</string>
    <string name="find_donor">Find Donor</string>
    <string name="choose_blood_group">Choose blood group</string>

</resources>