<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fillViewport="true"

            app:layout_constraintBottom_toTopOf="@+id/sign_up"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                >


                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/bu_back"
                    android:fontFamily="@font/tajawal_medium"
                    android:onClick="@{o->login.click(R.id.sign_in)}"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:backgroundTint="@color/primary_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forget_password" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_200"
                    android:text="@string/welcome"
                    android:textSize="@dimen/_25ssp"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/title"
                    android:fontFamily="@font/lemonada_medium"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/sign_in"
                    android:textSize="@dimen/_25ssp"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    android:id="@+id/sign_in_title"
                    android:fontFamily="@font/tajawal_medium"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_box"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sign_in_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tajawal_regular"
                        android:hint="@string/email"
                        android:imeOptions="flagNoExtractUi" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pass_box"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_box"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tajawal_regular"
                        android:hint="@string/password"
                        android:imeOptions="flagNoExtractUi"

                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@+id/pass_box"
              android:layout_marginTop="@dimen/_3sdp"
              android:text="@string/forget_password"
              android:textColor="@color/blue"
              android:selectAllOnFocus="false"
              android:linksClickable="false"
              android:autoLink="all"
              android:onClick="@{o->login.click(R.id.forget_password)}"
              android:id="@+id/forget_password"
              android:layout_marginStart="@dimen/_10sdp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_50sdp"
            android:textSize="@dimen/_14ssp"
            android:onClick="@{o->login.click(R.id.sign_up)}"

            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_20sdp"
            android:background="@color/primary_color"
            android:fontFamily="@font/tajawal_regular"
            app:layout_constraintBottom_toBottomOf="parent"
             android:gravity="center"
            />
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/arrow_back"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@null"
                    android:onClick="@{o->login.onBackPressed()}"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.Toolbar>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>
        <import type="azmithabet.com.bloodoran.R"/>
         <variable
            name="login"
            type="azmithabet.com.bloodoran.ui.activity.login.LoginActivity" />
    </data>


</layout>